# fcars

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: pcbo.rs
src/: bit_fiddling.rs  formal_concept.rs  formal_context.rs  lib.rs  pcbo.rs  random.rs
