[package]
name = "fcars"
version = "0.2.1"
edition = "2024"
authors = ["Ben Spitz <diracdeltafunk@users.noreply.github.com>"]
license = "MIT"
description = "A Rust library (and binary) for Formal Concept Analysis."
homepage = "https://github.com/diracdeltafunk/fcars"
repository = "https://github.com/diracdeltafunk/fcars"
keywords = ["fca", "formal-concept", "lattice"]
categories = ["mathematics"]
readme = "README.md"

[lib]
name = "fcars"
path = "src/lib.rs"

[[bin]]
name = "fcars"
path = "src/bin/fcars.rs"

[[bench]]
name = "pcbo"
harness = false

[dependencies]
bitvec = "1.0.1"
rayon = "1.11.0"
rand = { version = "0.9.2", optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
random = ["dep:rand"]
